# toxoid

./: .gitmodules  COPYING  README.md  build.gradle  dependencies.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/fredboy/toxoid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/fredboy/toxoid/: ToxoidApplication.kt
app/src/main/java/ru/fredboy/toxoid/clean/data/mapper/: BootstrapNodeMapper.kt  ChatMapper.kt  ContactMapper.kt  FriendRequestMapper.kt  LocalUserMapper.kt  MessageMapper.kt  ToxAddressMapper.kt  ToxFriendAddressMapper.kt  ToxPublicKeyMapper.kt  ToxServiceAddFriendArgsMapper.kt  ToxServiceSendMessageArgsMapper.kt
app/src/main/java/ru/fredboy/toxoid/clean/data/model/: FriendRequestData.kt
app/src/main/java/ru/fredboy/toxoid/clean/data/repository/: BootstrapNodesRepository.kt  ChatsRepository.kt  CommonPreferencesRepository.kt  ContactsRepository.kt  FriendRequestRepository.kt  LocalUsersRepository.kt  MessagesRepository.kt  OwnToxAddressRepository.kt  OwnToxIdRepository.kt  ToxOptionsRepository.kt  ToxSelfConnectionRepository.kt
app/src/main/java/ru/fredboy/toxoid/clean/domain/model/: BootstrapNode.kt  (+9 more)
app/src/main/java/ru/fredboy/toxoid/di/module/: FormatterModule.kt  RepositoryModule.kt  ToxServiceModule.kt
app/src/main/java/ru/fredboy/toxoid/tox/: ToxCoreCallbacks.kt  ToxEventListenerImpl.java  ToxService.kt  ToxServiceUseCases.kt  ToxThread.kt
app/src/main/java/ru/fredboy/toxoid/tox/api/: ToxApiHandler.kt  ToxApiHandlerUseCases.kt  ToxCoreLazy.kt  ToxServiceApiMethodQueue.kt
app/src/main/java/ru/fredboy/toxoid/utils/: CoroutinesUtils.kt  GeneralUtils.kt  NavigationUtils.kt  ToxUtils.kt  ViewUtils.kt
app/src/main/res/drawable/: bg_rounded_bottomsheet.xml  ic_bootstrap_node_offline.xml  ic_bootstrap_node_online.xml  ic_userpic_placeholder.xml
app/src/main/res/layout/: activity_main.xml  activity_welcome.xml  content_main.xml  content_welcome.xml  fragment_add_contact.xml  fragment_bootstrap.xml  fragment_chat.xml  fragment_chat_list.xml  fragment_new_user.xml  fragment_qr_scan.xml  fragment_welcome.xml  item_bootstrap_node.xml  item_chat_list.xml  item_chat_message.xml
app/src/main/res/navigation/: navigation_main.xml  navigation_welcome.xml
app/src/main/res/values/: attrs.xml  colors.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/ru/fredboy/toxoid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
tox4a/: build.gradle
tox4a-api/: build.gradle
tox4a-api/src/androidTest/java/ru/fredboy/tox4a/: ExampleInstrumentedTest.kt
tox4a-api/src/main/java/ru/fredboy/tox4a/api/av/: ToxAv.kt
tox4a-api/src/main/java/ru/fredboy/tox4a/api/core/: ToxCore.kt  ToxCoreConstants.kt
tox4a-api/src/main/java/ru/fredboy/tox4a/api/crypto/: ToxCrypto.kt  ToxCryptoConstants.kt
tox4a/src/main/cpp/: CMakeLists.txt  tox4a.cpp
tox4a/src/main/java/ru/fredboy/tox4a/impl/jni/: ToxCoreJni.java
tox4a/src/main/java/ru/fredboy/tox4a/jni/: ToxCoreJni.java
tox4a/src/main/kotlin/ru/fredboy/tox4a/core/: ToxCore.kt  ToxCoreEventDispatcher.kt
tox4a/src/main/kotlin/ru/fredboy/tox4a/core/callbacks/: CompositeToxCoreEventListener.kt  FileChunkRequestCallback.kt  FileRecvCallback.kt  FileRecvChunkCallback.kt  FileRecvControlCallback.kt  FriendConnectionStatusCallback.kt  FriendLosslessPacketCallback.kt  FriendLossyPacketCallback.kt  FriendMessageCallback.kt  FriendNameCallback.kt  FriendReadReceiptCallback.kt  FriendRequestCallback.kt  FriendStatusCallback.kt  FriendStatusMessageCallback.kt  FriendTypingCallback.kt  SelfConnectionStatusCallback.kt  ToxCoreEventListener.kt
tox4a/src/main/kotlin/ru/fredboy/tox4a/core/data/: ToxCoreProtoConverter.kt  ToxFileId.kt  ToxFileName.kt  ToxFriendAddress.kt  ToxFriendMessage.kt  ToxFriendNumber.kt  ToxFriendRequestMessage.kt  ToxLosslessPacket.kt  ToxLossyPacket.kt  ToxNickname.kt  ToxPublicKey.kt  ToxSecretKey.kt  ToxStatusMessage.kt
tox4a/src/main/kotlin/ru/fredboy/tox4a/core/options/: Options.kt
tox4a/src/main/proto/: tox4aAv.proto  tox4aCore.proto  tox4aProtoLog.proto
tox4a/src/test/java/ru/fredboy/tox4a/: ExampleUnitTest.kt
(+248 files in other folders)
